Restack buttons on small screens. Resolves #16

--- a/source/stylesheets/global/_variables.scss
+++ b/source/stylesheets/global/_variables.scss
@@ -1,9 +1,10 @@
 // Breakpoints
+$bp-sm: 25.00em;
 $bp-md: 43.75em;
 $bp-lg: 56.25em;
 
 // Colors
-$color-accent-1: cornflowerblue; 
+$color-accent-1: cornflowerblue;
 $color-accent-2: #242633; // grey-purple
 $color-accent-3: #0000ff; // blue
 $color-accent-4: rgba(198,172,154, 1.0);
